--- a/src/assets/globalStyle.css
+++ b/src/assets/globalStyle.css
@@ -1,7 +1,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;0,400;0,500;0,700;0,900;1,300&display=swap");
 
 #root {
-  max-width: 1280px;
+  max-width: 1600px;
   margin: 0 auto;
   padding: 0;
   /* text-align: center; */
@@ -71,6 +71,7 @@ body {
   box-shadow: 0px 1px 1px rgb(0, 0, 0/ 12%);
   border-bottom: 2px solid #eee;
   background: #f0f0e7;
+  width: 100%;
 }
 
 /* Homepage */
@@ -108,4 +109,29 @@ body {
   display: block;
   height: auto;
   max-width: 95%;
+}
+/* ========= */
+.feature-block {
+  padding-top: 30px;
+  margin-top: 30px;
+  height: 550px;
+  background: #f8f8f4;
+}
+
+.feature-title {
+  font-size: 3rem;
+}
+
+.feature-sub-title {
+  font-size: 2rem;
+  padding-top: 2rem;
+  padding-bottom: 3rem;
+}
+/* =========== */
+footer {
+  background: #f8f8f4;
+}
+.page {
+  height: 400px;
+  width: auto;
 }
