--- a/src/assets/globalStyle.css
+++ b/src/assets/globalStyle.css
@@ -152,3 +152,49 @@ footer {
 .btn-add {
   background-color: #1a8f73;
 }
+/* ------------------- */
+.table-activity {
+  border-collapse: "collapse";
+}
+.track-btn {
+  text-align: "center";
+  cursor: "pointer";
+  font-size: "20px";
+}
+/* -------loading */
+.loading_container {
+  display: "flex";
+  flex-direction: "column" as const;
+  align-items: "center";
+  justify-content: "center";
+  height: "100vh";
+  font-family: "Arial, sans-serif";
+}
+.loading_text {
+  margin-top: "1rem";
+  font-size: "1.2rem";
+  color: "#444";
+}
+.loading_spinner {
+  width: "40px";
+  height: "40px";
+  border: "5px solid #eee";
+  border-top: "5px solid #3f51b5";
+  border-radius: "50%";
+  animation: "spin 1s linear infinite";
+}
+@keyframes spin {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
+.eye-icon {
+  top: "50%";
+  padding-inline-start: 1rem;
+  transform: "translateY(-50%)";
+  cursor: "pointer";
+  color: "green";
+}
